@@ -1,48 +1,0 @@
-#
-#   Copyright 2007-2009 The OpenMx Project
-#
-#   Licensed under the Apache License, Version 2.0 (the "License");
-#   you may not use this file except in compliance with the License.
-#   You may obtain a copy of the License at
-# 
-#        http://www.apache.org/licenses/LICENSE-2.0
-# 
-#   Unless required by applicable law or agreed to in writing, software
-#   distributed under the License is distributed on an "AS IS" BASIS,
-#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#   See the License for the specific language governing permissions and
-#   limitations under the License.
-
-generateMatrixReferences <- function(model) {
-	matnames <- names(model@matrices)
-	algnames  <- c(names(model@algebras), names(model@objectives)) 
-	retval <- replicate(length(matnames), list())
-	names(retval) <- matnames
-	if (length(model@matrices) == 0) {
-		return(retval)
-	}
-	for (i in 1:length(model@matrices)) {
-		matrix <- model@matrices[[i]]
-		name <- matrix@name
-		labels <- matrix@labels
-		select <- !is.na(labels)
-		if (any(select == TRUE)) {
-			parameterNames <- labels[select]
-			rows <- row(labels)[select]
-			cols <- col(labels)[select]
-			for (j in 1:length(parameterNames)) {
-				parameterName <- parameterNames[[j]]
-				free <- matrix@free[rows[j], cols[j]]
-				if (!free && (parameterName %in% matnames) ||
-					(parameterName %in% algnames)) {
-					row <- rows[j] - 1
-					col <- cols[j] - 1
-					index <- omxLocateIndex(model, parameterName, name)
-					len <- length(retval[[name]])
-					retval[[name]][[len + 1]] <- c(row, col, index)
-				}
-			}
-		}
-	}
-	return(retval)
-}
